fixed image distort on characters page

--- a/css/style.css
+++ b/css/style.css
@@ -351,6 +351,7 @@ header img {
     display: flex;
     flex-direction: column;
     margin: 10px;
+    max-width: 40%;
 }
 
 .thumbnail .stars {
